Change text updated

--- a/public/static/style.css
+++ b/public/static/style.css
@@ -95,3 +95,14 @@ button:focus span {
         color: black;
     }
 }
+
+.clignote {
+    color: red;
+    animation: clignote .8s step-start infinite;
+}
+
+@keyframes clignote {
+    0%   { opacity: 1; }
+    40%  { opacity: 0; }
+    100% { opacity: 1; }
+}
